--- a/sygus.cabal
+++ b/sygus.cabal
@@ -29,6 +29,8 @@ library
 
 test-suite test
   build-depends:         base >=4.10 && <4.11
+                       , deepseq
+                       , sygus
                        , tasty >= 1.0
                        , tasty-hunit >= 0.10
   default-language:    Haskell2010
