--- a/sygus.cabal
+++ b/sygus.cabal
@@ -22,13 +22,13 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:         array
-                       , base >=4.10 && <4.11
+                       , base >=4.10 && <=4.12
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2 -Wall
 
 test-suite test
-  build-depends:         base >=4.10 && <4.11
+  build-depends:         base >=4.10 && <=4.12
                        , deepseq
                        , sygus
                        , tasty >= 1.0
