--- a/sygus.cabal
+++ b/sygus.cabal
@@ -18,11 +18,13 @@ cabal-version:       >=1.10
 library
   exposed-modules:       Sygus.LexSygus 
                        , Sygus.ParseSygus
+                       , Sygus.Print
                        , Sygus.Syntax
   -- other-modules:       
   -- other-extensions:    
   build-depends:         array
                        , base >=4.10 && <=4.12
+                       , text
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2 -Wall
@@ -33,6 +35,7 @@ test-suite test
                        , sygus
                        , tasty >= 1.0
                        , tasty-hunit >= 0.10
+                       , text
   default-language:    Haskell2010
   hs-source-dirs:      tests
   main-is:             Test.hs
