--- a/language-sygus.cabal
+++ b/language-sygus.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                language-sygus
-version:             0.1.1.0
+version:             0.1.1.2
 synopsis:            A parser and printer for the SyGuS 2.0 language.   
 description:         A parser and printer for the SyGuS 2.0 language.  <https://sygus.org/assets/pdf/SyGuS-IF_2.0.pdf>
 license:             BSD3
@@ -28,7 +28,8 @@ library
   -- other-extensions:    
   build-depends:         array >= 0.3 && < 0.6
                        , base >=4.10 && < 4.13
-                       , text >= 1.1 && < 1.3
+                       , hashable >= 1.2.6.0 && <= 1.3.0.0
+                       , text >= 1.1 && < 1.4
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
