--- a/language-sygus.cabal
+++ b/language-sygus.cabal
@@ -27,15 +27,15 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:         array >= 0.3 && < 0.6
-                       , base >=4.10 && < 4.13
-                       , hashable >= 1.2.6.0 && <= 1.3.0.0
+                       , base >=4.10 && < 4.16
+                       , hashable >= 1.2.6.0 && < 1.4
                        , text >= 1.1 && < 1.4
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
 
 test-suite test
-  build-depends:         base >=4.10 && <=4.12
+  build-depends:         base >=4.10 && < 4.16
                        , deepseq >= 1.1 && <1.5
                        , language-sygus
                        , tasty >= 1.0
