--- a/language-sygus.cabal
+++ b/language-sygus.cabal
@@ -27,7 +27,7 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:         array >= 0.3 && < 0.6
-                       , base >=4.10 && < 4.17
+                       , base >=4.10 && <= 4.18
                        , hashable >= 1.2.6.0 && <= 1.4.1.0
                        , text >= 1.1 && < 1.4
   hs-source-dirs:      src
