--- a/.github/workflows/haskell.yaml
+++ b/.github/workflows/haskell.yaml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        compiler: [ { ghc: '8.6.5', cabal: '3.0' }, { ghc: '8.10.7', cabal: '3.6' } ], { ghc: '9.2.2', cabal: '3.6' }
+        compiler: [ { ghc: '8.6.5', cabal: '3.0' }, { ghc: '8.10.7', cabal: '3.6' }, { ghc: '9.2.2', cabal: '3.6' }]
         test: [ test ]
 
     steps:
