--- a/language-sygus.cabal
+++ b/language-sygus.cabal
@@ -35,7 +35,7 @@ library
   ghc-options:         -Wall
 
 test-suite test
-  build-depends:         base >=4.10 && < 4.16
+  build-depends:         base
                        , deepseq >= 1.1 && <1.5
                        , language-sygus
                        , tasty >= 1.0
