--- a/language-sygus.cabal
+++ b/language-sygus.cabal
@@ -26,6 +26,7 @@ library
                        , Sygus.Syntax
   -- other-modules:       
   -- other-extensions:    
+  build-tools:         alex, happy
   build-depends:         array >= 0.3 && < 0.6
                        , base >=4.10 && <= 4.18
                        , hashable >= 1.2.6.0 && <= 1.4.1.0
