--- a/.github/workflows/haskell.yaml
+++ b/.github/workflows/haskell.yaml
@@ -43,4 +43,4 @@ jobs:
     - name: Build
       run: cabal build
     - name: Run tests
-      run: cabal run test ${{ matrix.test }}
+      run: cabal run ${{ matrix.test }}
